<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/fab_margin"
    android:paddingBottom="@dimen/fab_margin"
    android:paddingLeft="@dimen/twelve_margin"
    android:paddingRight="@dimen/twelve_margin"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--  <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/twelve_margin"
              android:layout_marginTop="@dimen/twelve_margin"
              android:textColor="@android:color/black"
              android:text="@string/new_plan_tip1"
              android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
  -->
        <!--Input Plan-->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/plan_content_layout"
                    android:baselineAligned="false"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/plan_content"
                        android:hint="@string/plan"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/plan_content_description"
                    android:textSize="@dimen/font_twelve"
                    android:layout_marginBottom="11dp"
                    android:hint="@string/plan_content_description"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--Input Goal-->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_bg"
            android:layout_marginTop="12dp"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/plan_goal_layout"
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/plan_goal"
                        android:hint="@string/goal"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/plan_goal_description"
                    android:textSize="@dimen/font_twelve"
                    android:layout_marginBottom="11dp"
                    android:hint="@string/plan_goal_description"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- date range -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_bg"
            android:layout_marginTop="12dp"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                android:orientation="vertical">
                <!--title-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondfont"
                    android:text="@string/plan_date_range"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:layout_marginBottom="@dimen/size_8dp"
                    android:gravity="center_vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_date_range"
                        android:layout_marginRight="4dp"/>
                    <!--start time-->
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/project_starttime"
                            android:layout_centerVertical="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="@dimen/size_18dp"
                            android:gravity="center"
                            android:paddingBottom="12dp"
                            android:paddingTop="12dp"/>
                        <View
                            android:layout_below="@id/project_starttime"
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp" android:background="@color/gray_font"/>
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_right_arrow"
                        android:layout_marginRight="@dimen/size_8dp"
                        android:layout_marginLeft="@dimen/size_8dp"/>

                    <!--end time-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/project_endtime"
                            android:layout_centerVertical="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="@dimen/size_18dp"
                            android:gravity="center"
                            android:paddingBottom="12dp"
                            android:paddingTop="12dp"/>
                        <View
                            android:layout_below="@id/project_endtime"
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp" android:background="@color/gray_font"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>



        <!-- status -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_bg"
            android:layout_marginTop="12dp"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_16dp"
                android:orientation="vertical">
                <!--title-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondfont"
                    android:text="@string/plan_status_priority"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:layout_marginBottom="@dimen/size_8dp"
                    android:gravity="center_vertical">
                    <ImageView
                        android:id="@+id/plan_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_status"
                        android:layout_marginRight="4dp"/>
                    <!-- status -->
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <Spinner
                            android:id="@+id/project_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/planStatus_items"
                            android:layout_centerHorizontal="true"/>
                        <View
                            android:layout_below="@id/project_status"
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp" android:background="@color/gray_font"/>
                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/ic_priority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_priority"
                        android:layout_marginLeft="@dimen/size_16dp"/>

                    <!--priority-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <Spinner
                            android:id="@+id/plan_priority"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:entries="@array/planPriority_items"
                            />
                        <View
                            android:layout_below="@id/plan_priority"
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp" android:background="@color/gray_font"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Plan memo -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_bg"
            android:layout_marginTop="12dp"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/plan_memo_layout"
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/plan_memo"
                        android:hint="@string/plan_memo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/plan_memo_description"
                    android:textSize="@dimen/font_twelve"
                    android:layout_marginBottom="11dp"
                    android:hint="@string/plan_memo_description"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!--底部操作按钮-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/plan_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_complete"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/plan_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_8dp"
                app:fabSize="mini"
                android:layout_centerVertical="true"
                app:backgroundTint="@color/white"
                android:layout_toLeftOf="@id/plan_complete"
                android:src="@drawable/ic_delete"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>

